@@ -91,6 +91,8 @@ and runping via mahadev)
   ZOOKEEPER-293. zoo_set needs to be abi compatible (3.1 changed the
 signature), fix this by adding zoo_set2 (pat via mahadev)
 
+ ZOOKEEPER-302. Quote values in JMX ObjectNames. (tom and pat via mahadev)
+
 IMPROVEMENTS:
    
   ZOOKEEPER-64. Log system env information when initializing server and
